--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-django
-django-rest-framework
-django-oauth-toolkit
+django~=3.1.7
+django-oauth-toolkit~=1.5.0
+pip~=21.0.1
+cryptography~=3.4.7
+setuptools~=54.2.0
+requests~=2.25.1
+pytz~=2021.1
+disafforested~=3.12.4
